Fixed dropdown scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -14,22 +14,21 @@ div::-webkit-scrollbar {
     display: none;
 }
 
-html {
-    
-}
-
-html::-webkit-scrollbar {
+html::-webkit-scrollbar,
+ul::-webkit-scrollbar {
     background-color: #0f172a;
     width: 8px;
 }
 
   
-html::-webkit-scrollbar-track {
+html::-webkit-scrollbar-track,
+ul::-webkit-scrollbar-track {
     background-color: rgba(240, 245, 248, .2) ;
     border-radius: 100px;
 }
   
-html::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb,
+ul::-webkit-scrollbar-thumb {
     border-radius: 100px;
     background-image: linear-gradient(180deg, #34D399 0%, #06976A 99%);
     box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
